objects/PMC_CPQ_Cadence__c.object
<CustomObject>
    <description>This object is created to show Product availability information</description>
    <fields>
        <fullName>PMC_CPQ_ConfirmedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Confirmed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ConfirmedQuantity__c</fullName>
        <label>Confirmed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteLine__c</fullName>
        <description>Determines the Quote line associated to the cadence</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Cadences</relationshipLabel>
        <relationshipName>Cadences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RequestedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RequestedQuantity__c</fullName>
        <label>Requested Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cadence</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Cadence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cadences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PMC_CPQ_RestrictPastRequestedDate</fullName>
        <active>false</active>
        <errorConditionFormula>PMC_CPQ_ConfirmedDate__c &lt;  TODAY()</errorConditionFormula>
        <errorMessage>Confirmed Date cannot be in Past</errorMessage>
    </validationRules>
</CustomObject>